tests/test_assets/semantic/invalid/expressions/modulo_float.cog
test::() {
    10 % 3.0;
}