tests/test_assets/semantic/invalid/expressions/modulo_float.expected
semantic error at line 2: '%' requires integer operands
1 semantic error generated.
